<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Software</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="play">Play</string>
    <string name="exit">Exit</string>
    <string name="game_title">Game Title</string>
    <string name="easy">EASY</string>
    <string name="medium">MEDIUM</string>
    <string name="hard">HARD</string>
    <string name="NIVEL1">NIVEL1</string>
    <string name="NIVEL2">NIVEL2</string>
    <string name="NIVEL3">NIVEL3</string>
    <string name="NIVEL4">NIVEL4</string>

</resources>
