<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background_1"
    android:textStyle="bold"
    tools:context="com.example.software.DifficultyActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="77dp"
        android:text="@string/game_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/abc_action_bar_stacked_max_height" />

    <Button
        android:id="@+id/mediumbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/easybutton"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="43dp"
        android:background="#80363636"
        android:text="@string/medium"
        android:textStyle="bold" />

    <Button
        android:id="@+id/easybutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mediumbutton"
        android:layout_centerHorizontal="true"
        android:background="#80363636"
        android:text="@string/easy"
        android:textStyle="bold" />

    <Button
        android:id="@+id/hardbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/mediumbutton"
        android:layout_below="@+id/mediumbutton"
        android:layout_marginTop="62dp"
        android:background="#80363636"
        android:text="@string/hard"
        android:textStyle="bold" />

</RelativeLayout>
