<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background_1"
    android:textStyle="bold"
    tools:context="com.example.software.MainActivity" >

    <Button
        android:id="@+id/playbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="183dp"
        android:textStyle="bold"
        android:background="#80363636"
        android:text="@string/play" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="77dp"
        android:text="@string/game_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/abc_action_bar_stacked_max_height" />

    <Button
        android:id="@+id/exitbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/playbutton"
        android:layout_alignTop="@+id/playbutton"
        android:layout_marginTop="79dp"
        android:background="#80363636"
        android:text="@string/exit"
        android:textStyle="bold" />

</RelativeLayout>